Colaboratory를 통해 생성됨

--- a/제주산학융합원_2021_인공지능을_활용한_업무자동화.ipynb
+++ b/제주산학융합원_2021_인공지능을_활용한_업무자동화.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "제주산학융합원_2021_인공지능을_활용한_업무자동화.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwyVhsTXrkdtH/wd1DE8w/",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOR2zOJpQT8DWhorsnH8668",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +40,7 @@
         "y = 7\r\n",
         "x + y"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +79,7 @@
         "y = 7\r\n",
         "x + y"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -111,7 +113,7 @@
         "j = {10, 20, 30, 40, 50}\r\n",
         "k = {'one':'하나', 'two':'둘'}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +132,7 @@
         "print(c + c)\r\n",
         "print(e + f)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +166,7 @@
         "print(a ** b)\r\n",
         "print(a % b)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +196,7 @@
         "print(type(a))\r\n",
         "print(dir(a))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +250,7 @@
         "print(a < b)\r\n",
         "print(a != b)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +284,7 @@
         "print(a or b) # 합 (둘 중 하나를 만족하면 True)\r\n",
         "print(not b) # 부정 "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +311,7 @@
         "  if i % 3 == 0 or i % 5 == 0:\r\n",
         "    print(i)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +386,7 @@
         "a **= 2\r\n",
         "print(a)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +417,7 @@
         "  x = x + 1\r\n",
         "print('end')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +464,7 @@
         "         break\r\n",
         "print('end')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -502,7 +504,7 @@
         "for i in range(10):\r\n",
         "  print(i)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -535,7 +537,7 @@
         "for i in 'hello world':\r\n",
         "    print(i)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +574,7 @@
         "    s = s + i\r\n",
         "print(s)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -601,7 +603,7 @@
         "for i in range(10):\r\n",
         "  print(i)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +635,7 @@
       "source": [
         "print(type(range(1, 10)))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,7 +695,7 @@
         "더하기(10, 200)\r\n",
         "더하기(a=10, b=200, c=10)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +729,7 @@
         "print('four')\r\n",
         "출력()\r\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +758,7 @@
         "min([1, 2, 3, 4, 5])\r\n",
         "max([1, 2, 3, 4, 5])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +791,7 @@
         "# 'append, 'clear', 'copy', 'count', 'extend',\r\n",
         "# 'index', 'insert', 'pop', 'remove', 'reverse', 'sort'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +816,7 @@
         "리스트.reverse()\r\n",
         "print(리스트)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,7 +839,7 @@
       "source": [
         "list(reversed(리스트))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +868,7 @@
         "리스트.append(50)\r\n",
         "리스트"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -897,7 +899,7 @@
         "print(리스트)\r\n",
         "print(리스트둘)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +924,7 @@
         "print(id(리스트))\r\n",
         "print(id(리스트둘))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +948,7 @@
       "source": [
         "str(list(range(10000))).count('8')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +980,7 @@
         "test2\r\n",
         "# test[1] = 100"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1010,7 @@
         "ss = {10, 20}\r\n",
         "s - ss"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1037,7 +1039,7 @@
         "s = 'hello world'\r\n",
         "set(s)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1070,7 @@
         "     'two': '둘'}\r\n",
         "d['one']"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1248,7 +1250,7 @@
         "    if i['지역이름'] == '제주':\r\n",
         "        print(i['확진자수'])"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1281,7 @@
         "  print('mom : im so happy')\r\n",
         "  money += 100000\r\n"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1319,7 @@
         "\r\n",
         "print(money)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1353,7 +1355,7 @@
         "k3.start(100)\r\n",
         "print(dir(k3))"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1386,7 +1388,7 @@
         "print(dir(k3))\r\n",
         "print(dir(k3Hy))"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,24 +1404,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PvbZUlmLjDeb"
+        "id": "PvbZUlmLjDeb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e39fbac1-e6de-4937-cf1c-b33db3246f7f"
       },
       "source": [
-        ""
+        "import test\r\n",
+        "print(test.age)\r\n",
+        "print(test.name)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "leehojun\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-Fuh8wO7iVXq"
+        "id": "-Fuh8wO7iVXq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2a04610-114f-4c9d-d499-f62853c4e34d"
       },
       "source": [
-        ""
+        "from test import age, name\r\n",
+        "\r\n",
+        "print(age)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
